# Smart-Factory

./: README.md  dasda   df 
Qt/: SmartFactory.pro  SmartFactory.pro.user.6127cee  data.cpp  data.h  data.ui  dbtable.cpp  dbtable.h  dbtable.ui  home.cpp  home.h  home.ui  image.cpp  image.h  image.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  monitoring.cpp  monitoring.h  monitoring.ui  socketclient.cpp  socketclient.h
Qt_php/: index.html  sqltable.php
SocketServer/: gcc -o.txt  idpasswd.txt  socket_server.c
manipulator_control/: degree.ino  dxl_degree_set.ino  dynamixel_init.ino  manipulator_control.ino  servo_pwm.ino
openCV/: Cammer_System.cpp  Cammer_System_img_v2.cpp
turtelbot3/my_amcl_launcher/: package.xml
turtelbot3/my_amcl_launcher/launch/: move_base.launch  my_navigation.launch
turtelbot3/my_amcl_launcher/maps/: map_402_3.yaml
turtelbot3/my_amcl_launcher/param/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
turtelbot3/my_amcl_launcher/rviz/: my_amcl.rviz
turtelbot3/my_mapping_launcher/: package.xml
turtelbot3/my_mapping_launcher/config/: my_params.yaml
turtelbot3/my_navigation_goals/: CMakeLists.txt  package.xml
turtelbot3/my_navigation_goals/src/: iot_navigation_loop.cpp  my_navigation_goals.cpp
turtelbot3/my_ros_tutorials/: package.xml
turtelbot3/my_ros_tutorials/src/: ros_tutorial_msg_publisher.cpp  ros_tutorial_msg_subscriber.cpp
turtelbot3/turtlebot3_navigation/launch/: amcl.launch  move_base.launch
(+8 files in other folders)
