<?xml version="1.0"?>
<package format="2">
  <name>my_amcl_launcher</name>
  <version>1.2.5</version>
  <description>The my_amcl_launcher package</description>
  <license>Apache 2.0</license>
  <author email="jhunlee9412@gmail.com">LJH</author>
  <author>Jihun Lee</author>
  <maintainer email="jhunlee9412@gmail.com">LJH</maintainer>
  <url type="website">http://github.com/jhl9412</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>

</package>
